fix: correção de bugs de rota
