# routes/characterRoutes.js
@@ -7,19 +7,19 @@ export class CharacterRoutes {
   }
 
   route() {
-    this.router.get("/", authentication, (req, res) =>
+    this.router.get("/all-characters", authentication, (req, res) =>
       this.characterController.find(req, res)
     );
-    this.router.post("/create", authentication, (req, res) =>
+    this.router.post("/create-characters", authentication, (req, res) =>
       this.characterController.create(req, res)
     );
-    this.router.patch("/update/:id", authentication, (req, res) =>
+    this.router.patch("/update-characters/:id", authentication, (req, res) =>
       this.characterController.update(req, res)
     );
-    this.router.delete("/delete/:id", authentication, (req, res) =>
+    this.router.delete("/delete-characters/:id", authentication, (req, res) =>
       this.characterController.delete(req, res)
     );
-    this.router.get("/find/:id", authentication, (req, res) =>
+    this.router.get("/find-characters/:id", authentication, (req, res) =>
       this.characterController.findById(req, res)
     );
     this.router.get("/search", authentication, (req, res) =>
